--- a/src/app/invoice.html
+++ b/src/app/invoice.html
@@ -27,7 +27,6 @@
   </div>
 
   <!-- Totals section -->
-  <!-- Totals section -->
 <div class="receipt-totals">
   <div class="total-row">
     <span class="label">SUBTOTAL</span>
@@ -44,7 +43,7 @@
 </div>
   <!-- Footer with thank you and barcode -->
   <div class="receipt-footer">
-    <p>THANK YOU</p>
+    <p>THANK YOU!</p>
     <div class="barcode">{{ receipt.barcode }}</div>
   </div>
 </div>
