--- a/src/app/invoice.css
+++ b/src/app/invoice.css
@@ -3,7 +3,7 @@
   margin: 0 auto;
   font-family: monospace;
   padding: 20px;
-  border: 2px dashed #ccc;
+  border: 2px outset #ccc;
   background-color: white;
 }
 
@@ -33,7 +33,7 @@
 }
 
 .receipt-details .message {
-  white-space: pre-line;
+  /* white-space: pre-line; */
   margin: 10px 0;
   font-style: italic;
 }
@@ -49,13 +49,13 @@
 }
 
 .item-row.header {
-  border-bottom: 1px dashed #000;
+  border-bottom: 2px dashed #000;
   padding-bottom: 5px;
   font-weight: bold;
 }
 
 .receipt-totals {
-  border-top: 1px dashed #000;
+  border-top: 2px dashed #000;
   padding-top: 10px;
   margin-top: 10px;
 }
